--- a/config/train.yml
+++ b/config/train.yml
@@ -11,7 +11,7 @@ batch_size: 2
 lr: 0.0001
 
 max_iters: 50000
-max_epochs: 600
+max_epochs: 20000 # TODO: change back to 600
 print_iters: 500
 summary_iters: 2500
 model_iters: 10000
